syntax = "proto3";

package datum;
option go_package = "github.com/pachyderm/pachyderm/v2/src/server/worker/datum";

import "gogoproto/gogo.proto";

import "pps/pps.proto";
import "server/worker/common/common.proto";

enum State {
  PROCESSED = 0;
  FAILED = 1;
  RECOVERED = 2;
}

message Meta {
  string job_id = 1 [(gogoproto.customname) = "JobID"];
  repeated common.Input inputs = 2;
  string hash = 3;
  State state = 4;
  string reason = 5;
  pps.ProcessStats stats = 6;
  int64 index = 7;
}

message Stats {
  pps.ProcessStats process_stats = 1;
  int64 processed = 2;
  int64 skipped = 3;
  int64 failed = 4;
  int64 recovered = 5;
  string failed_id = 6 [(gogoproto.customname) = "FailedID"];
}
